force-app/main/default/objects/ContractMember__c/ContractMember__c.object-meta.xml
<CustomObject>
    <label>Membro do Contrato</label>
    <nameField>
        <displayFormat>MC-{000000}</displayFormat>
        <label>Número do Membro do Contrat</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membros do Contrato</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>