force-app/main/default/objects/ContractMember__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Membros do Contrato</relationshipLabel>
    <relationshipName>Membros_do_Contrato</relationshipName>
    <type>Lookup</type>
</CustomField>