force-app/main/default/objects/ContractMember__c/fields/AccountEmailFormula__c.field-meta.xml
<CustomField>
    <fullName>AccountEmailFormula__c</fullName>
    <formula>Account__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Conta</label>
    <type>Text</type>
</CustomField>