force-app/main/default/objects/ContractMember__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Membros do Contrato</relationshipLabel>
    <relationshipName>Membros_do_Contrato</relationshipName>
    <type>Lookup</type>
</CustomField>