force-app/main/default/objects/ContractMember__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Relação Ativa?</label>
    <type>Checkbox</type>
</CustomField>