force-app/main/default/objects/ContractMember__c/fields/RelatedContract__c.field-meta.xml
<CustomField>
    <fullName>RelatedContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Membros do Contrato</relationshipLabel>
    <relationshipName>Membros_do_Contrato</relationshipName>
    <type>Lookup</type>
</CustomField>