force-app/main/default/objects/ContractMember__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landlord</fullName>
                <label>Proprietário</label>
            </value>
            <value>
                <fullName>Tenant</fullName>
                <label>Inquilino</label>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>MAIN_TENANT_RENTAL_MANAGER</fullName>
                <label>Inquilino principal</label>
            </value>
            <value>
                <fullName>CO_TENANT_RENTAL_MANAGER</fullName>
                <label>Co-Inquilino</label>
            </value>
            <value>
                <fullName>MAIN_LANDLORD_RENTAL_MANAGER</fullName>
                <label>Proprietário principal</label>
            </value>
            <value>
                <fullName>CO_LANDLORD_RENTAL_MANAGER</fullName>
                <label>Co-Proprietário</label>
            </value>
            <value>
                <fullName>RESIDENT</fullName>
                <label>Morador</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>